@@ -2,89 +2,78 @@
 <!-- $Id$ -->
 <!DOCTYPE specification PUBLIC "-//Primix Solutions//Tapestry Specification 1.0//EN"
 	"http://tapestry.sourceforge.net/dtd/Tapestry_1_0.dtd">
-
 <specification>
 	<class>tutorial.hangman.Home</class>
-
 	<components>
-
-	<component>
-		<id>form</id>
-		<type>Form</type>
-		<bindings>
-			<binding>
-				<name>listener</name>
-				<property-path>formListener</property-path>
-			</binding>
-		</bindings>
-	</component>
-
-	<component>
-		<id>group</id>
-		<type>RadioGroup</type>
-	</component>
-
-	<component>
-		<id>ifError</id>
-		<type>Conditional</type>
-
-		<bindings>
-			<binding>
-				<name>condition</name>
-				<property-path>error</property-path>
-			</binding>
-		</bindings>
-	</component>
-
-	<component>
-		<id>insertError</id>
-		<type>Insert</type>
-
-		<bindings>
-			<binding>
-				<name>value</name>
-				<property-path>error</property-path>
-			</binding>
-		</bindings>
-	</component>
-
-	<component>
-		<id>inputEasy</id>
-		<type>Radio</type>
-
-		<bindings>
-			<binding>
-				<name>selected</name>
-				<property-path>easy</property-path>
-			</binding>
-		</bindings>
-	</component>
-
-	<component>
-		<id>inputMedium</id>
-		<type>Radio</type>
-
-		<bindings>
-			<binding>
-				<name>selected</name>
-				<property-path>medium</property-path>
-			</binding>
-		</bindings>
-	</component>
-
-	<component>
-		<id>inputHard</id>
-		<type>Radio</type>
-
-		<bindings>
-			<binding>
-				<name>selected</name>
-				<property-path>hard</property-path>
-			</binding>
-		</bindings>
-	</component>
-
+		<component>
+			<id>form</id>
+			<type>Form</type>
+			<bindings>
+				<binding>
+					<name>listener</name>
+					<property-path>formListener</property-path>
+				</binding>
+			</bindings>
+		</component>
+		<component>
+			<id>group</id>
+			<type>RadioGroup</type>
+			<bindings>
+				<binding>
+					<name>selected</name>
+					<property-path>misses</property-path>
+				</binding>
+			</bindings>
+		</component>
+		<component>
+			<id>ifError</id>
+			<type>Conditional</type>
+			<bindings>
+				<binding>
+					<name>condition</name>
+					<property-path>error</property-path>
+				</binding>
+			</bindings>
+		</component>
+		<component>
+			<id>insertError</id>
+			<type>Insert</type>
+			<bindings>
+				<binding>
+					<name>value</name>
+					<property-path>error</property-path>
+				</binding>
+			</bindings>
+		</component>
+		<component>
+			<id>inputEasy</id>
+			<type>Radio</type>
+			<bindings>
+				<field-binding>
+					<name>value</name>
+					<field-name>tutorial.hangman.Home.EASY</field-name>
+				</field-binding>
+			</bindings>
+		</component>
+		<component>
+			<id>inputMedium</id>
+			<type>Radio</type>
+			<bindings>
+				<field-binding>
+					<name>value</name>
+					<field-name>tutorial.hangman.Home.MEDIUM</field-name>
+				</field-binding>
+			</bindings>
+		</component>
+		<component>
+			<id>inputHard</id>
+			<type>Radio</type>
+			<bindings>
+				<field-binding>
+					<name>value</name>
+					<field-name>tutorial.hangman.Home.HARD</field-name>
+				</field-binding>
+			</bindings>
+		</component>
 	</components>
-
 </specification>
-	
